--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -53,7 +53,7 @@
         <ion-row>
           <ion-col text-center>
               <ion-icon color="grey" name="happy"></ion-icon>
-              Customer: {{order.userDetail.name}}
+              Customer: {{order.userDetail.name}} [{{order.userDetail.externalId}}]
           </ion-col>
         </ion-row>
         <ion-row>
