--- a/src/pages/popover-home/popover-home.html
+++ b/src/pages/popover-home/popover-home.html
@@ -4,3 +4,9 @@
     <span>{{option.name}}</span>
   </ion-item>
 </ion-list>
+<ion-list *ngFor="let option of otherOptions">
+    <ion-item (click)="openPage(option.name)" >
+      <ion-icon name="{{option.icon}}"></ion-icon>
+      <span>{{option.name}}</span>
+    </ion-item>
+  </ion-list>
