--- a/src/pages/admin-list-user/admin-list-user.html
+++ b/src/pages/admin-list-user/admin-list-user.html
@@ -8,5 +8,31 @@
 </ion-header>
 
 <ion-content class="full-background">
-
+  <div class="search-spinner">
+    <ion-spinner name="crescent" *ngIf="!userListAvailable"></ion-spinner>
+  </div>
+  <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-list *ngIf="userListAvailable && (userList.length > 0)">
+    <button ion-item *ngFor="let user of userList" (click)="getCustomerDetail()">
+      <ion-avatar item-start>
+        <img src="./assets/imgs/avatar.png">
+      </ion-avatar>
+      <span>[{{user.externalId}}] {{user.name}}</span>
+      <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button> -->
+      <button ion-button clear color="secondary" item-end>
+        <ion-icon name="md-key"></ion-icon>Reset
+      </button>
+    </button>
+  </ion-list>
+  <ion-card *ngIf="userListAvailable && (userList.length < 1)">
+    <ion-card-header text-center>
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
 </ion-content>
+  
