--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -87,6 +87,7 @@
     <ion-col text-center>
       <button *ngIf="showCsvButton" ion-button primary color="light" (click)="exportToCsv()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Export to csv<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
       <button *ngIf="showImportOrder" ion-button primary color="secondary" (click)="importOrder()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+      <button *ngIf="showCancelOrder" ion-button primary color="secondary" (click)="cancelOrder()"><ion-icon name="close-circle"></ion-icon> Cancel Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
     </ion-col>
   </ion-row>
 </ion-footer>
