--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -1,12 +1,48 @@
 <ion-header>
   <ion-navbar>
-    <!-- <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button> -->
-    <ion-title>List Product</ion-title>
+    <ion-title>Product List</ion-title>
   </ion-navbar>
 </ion-header>
-
 <ion-content class="full-background">
-
+  <div class="search-spinner">
+    <ion-spinner name="crescent" *ngIf="!productListAvailable"></ion-spinner>
+  </div>
+  <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+  <ion-list *ngIf="productListAvailable &&  (productList.length > 0)">
+    <ion-card *ngFor="let product of productList">
+      <ion-card-content>
+        <ion-row>
+          <ion-col text-center>
+            <ion-icon name="cube" color="grey"></ion-icon>
+              <span>{{product.name}} [{{product.productCode}}]</span>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col text-center>
+            <ion-icon name="cash" color="grey"></ion-icon>
+            Price: <span>{{product.price}} ZMW</span>
+          </ion-col>
+          <ion-col text-center>
+            Type: <span>{{product.priceType}}</span>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col text-center>
+            <ion-icon name="cash" color="grey"></ion-icon>
+            CaseSize: <span>{{product.currentCaseSize}}</span>
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+    <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+      <ion-infinite-scroll-content></ion-infinite-scroll-content>
+    </ion-infinite-scroll>
+  </ion-list>
+  <ion-card *ngIf="productListAvailable && (productList.length < 1)">
+    <ion-card-header text-center>
+      <h4>No record found</h4>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
