updated download csv functionality

--- a/src/pages/customer-order-detail/customer-order-detail.html
+++ b/src/pages/customer-order-detail/customer-order-detail.html
@@ -82,7 +82,7 @@
       </ion-card>
   </ion-list>
 </ion-content>
-<ion-footer>
+<ion-footer class="full-background">
   <ion-row>
     <ion-col text-center>
       <button *ngIf="showImportOrder" ion-button primary color="secondary" (click)="importOrder()"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
