--- a/src/pages/add-product/add-product.html
+++ b/src/pages/add-product/add-product.html
@@ -47,6 +47,14 @@
                   </ion-item>
 
                   <ion-item>
+                    <ion-label floating>Product Sys Code</ion-label>
+                    <ion-input type="text" formControlName="productSysCode"></ion-input>
+                  </ion-item>
+                  <ion-item *ngIf="productSysCode.hasError('required') && productSysCode.touched">
+                    <p style="color: red">product sys code is required*</p>
+                  </ion-item>
+
+                  <ion-item>
                     <ion-label floating>Price</ion-label>
                     <ion-input type="text" formControlName="price"></ion-input>
                   </ion-item>
