--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -105,7 +105,7 @@
                   <p style="color: red">password  is required*</p>
                 </ion-item>
                 <ion-grid>
-                  <button ion-button color="secondary" [disabled]="!(addAdminForm.valid)" (click)="createUser('admin');">Add Admin<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+                  <button ion-button color="secondary" [disabled]="!(addAdminForm.controls.name.valid && addAdminForm.controls.userLoginId.valid && addAdminForm.controls.password.valid)" (click)="createUser('admin');">Add Admin<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
                 </ion-grid>
               </form>
             </ion-col>
