added sys code in ui

--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -30,7 +30,9 @@
         </ion-row>
         <ion-row>
           <ion-col text-center>
-            <ion-icon name="cash" color="grey"></ion-icon>
+              SysCode: <span>{{product.productSysCode}}</span>
+            </ion-col>
+          <ion-col text-center>
             CaseSize: <span>{{product.currentCaseSize}}</span>
           </ion-col>
         </ion-row>
