improved: minor ui changes

--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -18,8 +18,8 @@
     </ion-refresher>
     <ion-list *ngIf="productListAvailable &&  (productList.length > 0)">
       <ion-card *ngFor="let product of productList">
-        <ion-card-header text-center>
-          <ion-row>
+        <ion-card-content>
+        <ion-row>
             <ion-col text-center>
               <ion-icon name="cube" color="grey"></ion-icon>
               <span>{{product.name}}</span>
@@ -30,17 +30,19 @@
               <ion-icon name="cash" color="grey"></ion-icon>
               Price: <span>{{product.price}} ZMW</span>
             </ion-col>
+            <ion-col text-center>
+              CaseSize: <span>{{product.currentCaseSize}}</span>
+            </ion-col>
           </ion-row>
-        </ion-card-header>
-        <ion-card-content>
           <ion-row>
             <ion-col col-12>
               <ion-row>
                 <ion-col col-2 text-left>
                   <button ion-button clear icon-only (click)="(product.quantity = decrementQty(product.quantity))"><ion-icon name="remove-circle" ></ion-icon></button>
                 </ion-col>
-                <ion-col col-2>
-                  <ion-input item-start type="text" placeholder="Quantity" [(ngModel)]="product.quantity" #qty></ion-input>
+                <ion-col col-2 text-center>
+                <!--   <ion-input type="text" placeholder="Quantity" [(ngModel)]="product.quantity" #qty style="text-align: center;"></ion-input> -->
+                  <input type='text' name='quantity' [(ngModel)]="product.quantity" value='0' class='qty' style="width: 40px;height: 25px;text-align: center;margin-top: 10px;margin-left: 10px;" />
                 </ion-col>
                 <ion-col col-2 text-left>
                   <button ion-button clear icon-only (click)="(product.quantity = incrementQty(product.quantity))"><ion-icon name="add-circle" ></ion-icon></button>
