--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -38,7 +38,7 @@
         </ion-row>
         <ion-row>
           <ion-col text-center>
-            <button color="secondary" ion-button outline (click)="editProduct()">
+            <button color="secondary" ion-button outline (click)="editProduct(product)">
               <ion-icon name="create"></ion-icon>Edit
             </button>
           </ion-col>
