--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -52,7 +52,7 @@
             </ion-col>
           </ion-row>
           <ion-row>
-            <ion-col col-12 text-center> 
+            <ion-col col-12 text-center class="{{order.status}}"> 
               <ion-icon color="grey" name="podium"></ion-icon>Status: {{order.status}}
             </ion-col>
           </ion-row>
