--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -66,13 +66,16 @@
           <ion-col text-center>
               <ion-icon color="grey" name="cash"></ion-icon> Total: {{order.orderTotal}} ZMW
           </ion-col>
-          <ion-col text-center> 
-              <ion-icon color="grey" name="podium"></ion-icon>Status: {{order.status}}
+          <ion-col text-center class="{{order.status}}"> 
+            <ion-icon color="grey" name="podium"></ion-icon>Status: {{order.status}}
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col col-12 text-center>
+          <ion-col text-center>
             <button ion-button outline color="secondary" item-end (click)="getOrderDetial(order)">view order</button>
+          </ion-col>
+          <ion-col text-center>
+            <button ion-button color="light" [disabled]="!(order.showImport)" (click)="importOrder(order)"><ion-icon name="arrow-dropdown-circle"></ion-icon> Import Order<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
           </ion-col>
         </ion-row>
     </ion-card-content>
