--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -57,6 +57,11 @@
           </ion-col>
         </ion-row>
         <ion-row>
+          <ion-col col-12 text-center>
+            <ion-icon name="pin" color="grey"></ion-icon> Province: <span>{{order.userDetail.country}} [ {{order.userDetail.province}} ]</span>
+          </ion-col>
+        </ion-row>
+        <ion-row>
           <ion-col text-center>
               <ion-icon color="grey" name="calendar"></ion-icon>
               Date: {{order.lastUpdatedAt}}
