--- a/src/pages/add-user/add-user.html
+++ b/src/pages/add-user/add-user.html
@@ -13,21 +13,27 @@
           <ion-row>
             <ion-col>
               <ion-list>
-                  <ion-item>
-                    <ion-label><ion-icon md="md-happy" padding-right class="primary-color-icon"></ion-icon>User Type</ion-label>
-                    <ion-select [(ngModel)]="selectedUserType" interface="popover" (ngModelChange)="onUserTypeSelect()">
-                      <ion-option *ngFor="let user of userTypeList" [value]="user">{{user}}</ion-option>
-                    </ion-select>
-                  </ion-item>
-                </ion-list>
+                <ion-item>
+                  <ion-label><ion-icon name="md-happy" color="grey" padding-right></ion-icon>User Type</ion-label>
+                  <ion-select [(ngModel)]="selectedUserType" interface="popover" (ngModelChange)="onUserTypeSelect()">
+                    <ion-option *ngFor="let user of userTypeList" [value]="user">{{user}}</ion-option>
+                  </ion-select>
+                </ion-item>
+                <ion-item>
+                  <ion-label><ion-icon name="pin" color="grey" padding-right></ion-icon>Country</ion-label>
+                  <ion-select [(ngModel)]="selectedCountry" interface="popover">
+                    <ion-option *ngFor="let country of countryList" [value]="country">{{country}}</ion-option>
+                  </ion-select>
+                </ion-item>
+                <ion-item>
+                  <ion-label><ion-icon name="locate" color="grey" padding-right></ion-icon>Province</ion-label>
+                  <ion-select [(ngModel)]="selectedProvince" interface="popover">
+                    <ion-option *ngFor="let province of provinceList" [value]="province">{{province}}</ion-option>
+                  </ion-select>
+                </ion-item>
+              </ion-list>
             </ion-col>  
             <ion-col *ngIf="showCustomerForm">
-              <ion-item>
-                <ion-label><ion-icon class="pin" padding-right class="primary-color-icon"></ion-icon>Country</ion-label>
-                <ion-select [(ngModel)]="selectedCountry" interface="popover" (ngModelChange)="onUserTypeSelect()">
-                  <ion-option *ngFor="let country of countryList" [value]="country">{{country}}</ion-option>
-                </ion-select>
-              </ion-item>
               <form [formGroup]="addCustomerForm">
                 <ion-item>
                     <ion-label floating>Name</ion-label>
@@ -68,26 +74,12 @@
                 <ion-item *ngIf="channel.hasError('required') && channel.touched">
                   <p style="color: red">channel is required*</p>
                 </ion-item>
-
-                <ion-item>
-                  <ion-label floating>Province</ion-label>
-                  <ion-input type="text" formControlName="province"></ion-input>
-                </ion-item>
-                <ion-item *ngIf="province.hasError('required') && province.touched">
-                  <p style="color: red">province is required*</p>
-                </ion-item>
                 <ion-grid>
                   <button ion-button color="secondary" [disabled]="!(addCustomerForm.valid)" (click)="createUser('customer');">Add Customer<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
                 </ion-grid>
               </form>
             </ion-col>
             <ion-col *ngIf="!showCustomerForm">
-                <ion-item>
-                  <ion-label><ion-icon class="pin" padding-right class="primary-color-icon"></ion-icon>Country</ion-label>
-                  <ion-select [(ngModel)]="selectedCountry" interface="popover" (ngModelChange)="onUserTypeSelect()">
-                    <ion-option *ngFor="let country of countryList" [value]="country">{{country}}</ion-option>
-                  </ion-select>
-                </ion-item>
               <form [formGroup]="addAdminForm">
                 <ion-item>
                   <ion-label floating>Name</ion-label>
@@ -110,15 +102,8 @@
                   <ion-item *ngIf="password.hasError('required') && password.touched">
                   <p style="color: red">password  is required*</p>
                 </ion-item>
-                <ion-item>
-                    <ion-label floating>Province</ion-label>
-                    <ion-input type="text" formControlName="province"></ion-input>
-                  </ion-item>
-                  <ion-item *ngIf="province.hasError('required') && province.touched">
-                    <p style="color: red">province is required*</p>
-                </ion-item>
                 <ion-grid>
-                  <button ion-button color="secondary" [disabled]="!(addAdminForm.controls.name.valid && addAdminForm.controls.userLoginId.valid && addAdminForm.controls.password.valid && addAdminForm.controls.province.valid)" (click)="createUser('admin');">Add Admin<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
+                  <button ion-button color="secondary" [disabled]="!(addAdminForm.controls.name.valid && addAdminForm.controls.userLoginId.valid && addAdminForm.controls.password.valid)" (click)="createUser('admin');">Add Admin<ion-spinner name="dots" *ngIf="showLoader"></ion-spinner></button>
                 </ion-grid>
               </form>
             </ion-col>
