--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -72,7 +72,7 @@
               <ion-icon color="grey" name="cash"></ion-icon> Total: {{order.orderTotal}} ZMW
           </ion-col>
           <ion-col text-center class="{{order.status}}"> 
-            <ion-icon color="grey" name="podium"></ion-icon>Status: {{order.status}}
+            <ion-icon color="grey" name="podium"></ion-icon>Status: <strong text-uppercase>{{order.status}}</strong>
           </ion-col>
         </ion-row>
         <ion-row>
