--- a/src/pages/customer-list-order/customer-list-order.html
+++ b/src/pages/customer-list-order/customer-list-order.html
@@ -53,7 +53,7 @@
           </ion-row>
           <ion-row>
             <ion-col col-12 text-center class="{{order.status}}"> 
-              <ion-icon color="grey" name="podium"></ion-icon>Status: {{order.status}}
+                <ion-icon color="grey" name="podium"></ion-icon>Status: <strong text-uppercase>{{order.status}}</strong>
             </ion-col>
           </ion-row>
           <ion-row>
