--- a/src/pages/customer-list-product/customer-list-product.html
+++ b/src/pages/customer-list-product/customer-list-product.html
@@ -1,6 +1,6 @@
   <ion-header>
     <ion-navbar>
-      <ion-title>Product List</ion-title>
+      <ion-title>{{categoryObj.name}}</ion-title>
       <ion-buttons end>
         <button ion-button icon-only (click)="reviewAndSubmitOrder()">
           <h4>{{cart.length}}</h4>
