--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Product List</ion-title>
+      <ion-title>{{categoryObj.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content class="full-background">
