--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -97,7 +97,7 @@
 <ion-footer *ngIf="orderList.length" class="full-background">
   <ion-row>
     <ion-col text-center>
-      <button ion-button  color="light" (click)="filterOrderToExport()"><ion-icon name="document"></ion-icon> Export to csv</button>
+      <button ion-button  color="secondary" (click)="filterOrderToExport()"><ion-icon name="document"></ion-icon> Export to csv</button>
     </ion-col>
   </ion-row>
 </ion-footer>
