--- a/src/pages/customer-review-submit-order/customer-review-submit-order.html
+++ b/src/pages/customer-review-submit-order/customer-review-submit-order.html
@@ -77,7 +77,7 @@
                 <span>Price: {{product.price}} ZMW</span>
               </ion-col>
             </ion-row>
-            <ion-row>
+            <!-- <ion-row>
               <ion-col col-12>
                 <ion-row>
                   <ion-col col-4 text-left style="padding-top: 7%">
@@ -88,10 +88,26 @@
                   </ion-col>
                   <ion-col col-2>
                     <input type='text' name='quantity' [(ngModel)]="product.quantity" value='0' class='qty' style="width: 40px;height: 25px;text-align: center;margin-top: 10px;margin-left: 10px;" />
-                    <!-- <ion-input item-start type="text" placeholder="Quantity" [(ngModel)]="product.quantity" #qty></ion-input> -->
                   </ion-col>
                   <ion-col col-2 text-left>
                     <button ion-button clear icon-only (click)="(product.quantity = incrementQty(product))"><ion-icon name="add-circle" ></ion-icon></button>
+                  </ion-col>
+                </ion-row>
+              </ion-col>
+            </ion-row> -->
+            <ion-row>
+              <ion-col col-12>
+                <ion-row>
+                  <ion-col col-4 text-left style="padding-top: 7%">
+                    <span>Quantity: </span>
+                  </ion-col>
+                  <ion-col col-2>
+                    <input type='text' name='quantity' [(ngModel)]="product.quantity" value='0' class='qty' style="width: 40px;height: 25px;text-align: center;margin-top: 10px;margin-left: 10px;" />
+                  </ion-col>
+                  <ion-col col-6 text-right>
+                    <button ion-button color="secondary" (click)="updateCart(product)" style="color: white!important;">
+                      <strong><ion-icon name="cart"></ion-icon>Update</strong>
+                    </button>
                   </ion-col>
                 </ion-row>
               </ion-col>
