--- a/src/pages/customer-category-list/customer-category-list.html
+++ b/src/pages/customer-category-list/customer-category-list.html
@@ -13,6 +13,7 @@
   <div class="search-spinner">
     <ion-spinner name="crescent" *ngIf="!categoryListAvailable"></ion-spinner>
   </div>
+  <ion-searchbar *ngIf="categoryListAvailable && (childCategoryList.length > 0)" (ionInput)="getItems($event)" placeholder="Search any product in {{categoryObj.name}}" class="sticky-custom"></ion-searchbar>
   <ion-refresher (ionRefresh)="doRefresh($event)" spinner="crescent">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
