updated the search ui

--- a/src/pages/admin-list-product/admin-list-product.html
+++ b/src/pages/admin-list-product/admin-list-product.html
@@ -1,7 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <!-- <ion-title *ngIf="isSearch">{{categoryObj.name}}</ion-title>
-    <ion-title *ngIf="isSearch">Search Result: {{keyword}}</ion-title> -->
+    <ion-title>{{categoryObj.name}}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content class="full-background">
