--- a/src/pages/customer-category-list/customer-category-list.html
+++ b/src/pages/customer-category-list/customer-category-list.html
@@ -8,7 +8,7 @@
       </button>
     </ion-buttons>
   </ion-navbar>
-  <ion-toolbar *ngIf="categoryListAvailable && (childCategoryList.length > 0)">
+  <ion-toolbar>
     <form (ngSubmit)="submitSearch($event)">
       <ion-searchbar (ionInput)="getItems($event)" placeholder="Search any product in {{categoryObj.name}}"></ion-searchbar>
     </form>
