menu and page layout design

--- a/src/pages/admin-list-category/admin-list-category.html
+++ b/src/pages/admin-list-category/admin-list-category.html
@@ -17,7 +17,7 @@
       <img src="./assets/imgs/productcategory.png">
     </ion-avatar>
     <span>{{category.name}}</span>
-    <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
+    <button ion-button clear color="secondary" item-end><ion-icon name="arrow-forward"></ion-icon></button>
   </button>
 </ion-list>
 <ion-card *ngIf="categoryListAvailable && (parentCategoryList.length < 1)">
