--- a/src/pages/admin-list-user/admin-list-user.html
+++ b/src/pages/admin-list-user/admin-list-user.html
@@ -20,7 +20,7 @@
         <img src="./assets/imgs/avatar.png">
       </ion-avatar>
       <span>[{{user.externalId}}] {{user.name}}</span>
-      <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button> -->
+      <!-- <button ion-button clear color="secondary" item-end><h1><ion-icon md="arrow-forward"></ion-icon></h1></button> -->
       <button ion-button clear color="secondary" item-end (click)="resetPasswordModel(user)">
         <ion-icon name="md-key"></ion-icon>Reset
       </button>
