--- a/src/pages/customer-home/customer-home.html
+++ b/src/pages/customer-home/customer-home.html
@@ -5,9 +5,9 @@
       </button>
       <ion-title>Parent Categories</ion-title>
       <ion-buttons end>
-        <button ion-button icon-only (click)="reviewAndSubmitOrder()">
-          <h4>{{cart.length}}</h4>
+        <button class="cart-btn" ion-button icon-only (click)="reviewAndSubmitOrder()">
           <ion-icon name="cart"></ion-icon>
+          <ion-badge class="cart-badge">{{cart.length}}</ion-badge>
         </button>
         <button ion-button icon-only (click)="presentPopover($event)">
           <ion-icon name="more"></ion-icon>
@@ -29,7 +29,7 @@
         <img src="./assets/imgs/productcategory.png">
       </ion-avatar>
       <span>{{category.name}}</span>
-      <button ion-button clear color="secondary" item-end><h1><ion-icon md="md-arrow-round-forward"></ion-icon></h1></button>
+      <button ion-button clear color="secondary" item-end><ion-icon name="arrow-forward"></ion-icon></button>
     </button>
   </ion-list>
   <ion-card *ngIf="categoryListAvailable && (parentCategoryList.length < 1)">
