--- a/src/pages/page-not-found/page-not-found.html
+++ b/src/pages/page-not-found/page-not-found.html
@@ -7,11 +7,11 @@
 
 <ion-content padding>
   <div class="not-found">
-  <img src="../assets/imgs/error.svg" alt="Error icon">
-  <p class="error-code">404</p>
-  <p class="error-msg">This is not the page you are looking for.</p>
+  <img src="../assets/imgs/iconoteka.svg" alt="Clock icon">
+  <p class="error-code">Session Expired!!!</p>
+  <p class="error-msg">Your session has expired due to inactivity.</p>
   <div class="button-wrapper">
-    <button ion-button class="btn">Go Home</button>
+    <button ion-button class="btn">Login</button>
     <button ion-button class="btn">Contact Us</button>
   </div>
 </div>
