--- a/src/pages/session-expired/session-expired.html
+++ b/src/pages/session-expired/session-expired.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the PageNotFoundPage page.
+  Generated template for the SessionExpiredPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -12,7 +12,6 @@
   <p class="error-msg">Your session has expired due to inactivity.</p>
   <div class="button-wrapper">
     <button ion-button class="btn">Login</button>
-    <button ion-button class="btn">Contact Us</button>
   </div>
 </div>
 </ion-content>
