--- a/src/pages/session-expired/session-expired.html
+++ b/src/pages/session-expired/session-expired.html
@@ -7,11 +7,11 @@
 
 <ion-content padding>
   <div class="not-found">
-  <img src="../assets/imgs/iconoteka.svg" alt="Clock icon">
-  <p class="error-code">Session Expired!!!</p>
-  <p class="error-msg">Your session has expired due to inactivity.</p>
+  <img src="assets/imgs/iconoteka.svg" alt="Clock icon">
+  <p class="error-code">Token Expired!!!</p>
+  <p class="error-msg">Your token has expired please login to continue.</p>
   <div class="button-wrapper">
-    <button ion-button class="btn">Login</button>
+    <button ion-button class="btn" (click)="goToLogin()">Login</button>
   </div>
 </div>
 </ion-content>
